<resources>
    <string name="app_name">SWaP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="video_id_na">Video ID : NA</string>
    <string name="title">Title</string>
    <string name="title_activity_youtube_adapter">YoutubeAdapter</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="play_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To </string>
    <string name="seek_to_hint">Seconds</string>

    <string name="search_youtube">YouTube search</string>
    <string name="search_youtube_keywords">Keywords input</string>
    <string name="search_youtube_btn">search</string>
    <string name="sign_out">Sign Out</string>
    <string name="youtube">YouTube</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="inbox">Inbox</string>
    <string name="youtubee">Youtube</string>
    <string name="netflix">Netflix</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profilee">Profilee</string>
    <string name="chat">Chat</string>
    <string name="addfriend">Addfriend</string>
    <string name="logout">logout</string>
    <string name="logoutt">Logout</string>
    <string name="add_friend">Add friend</string>

</resources>