<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
        android:icon="@drawable/profilee"
        android:title="@string/profile" />

    <item android:id="@+id/menuNotifications"
        android:icon="@drawable/notifications"
        android:title="@string/notifications" />

    <item android:id="@+id/munuChat"
        android:icon="@drawable/chat"
        android:title="@string/chat" />

    <item android:id="@+id/munuaddfriend"
        android:icon="@drawable/addfriend"
        android:title="@string/add_friend" />

    <item android:id="@+id/menuYoutubee"
        android:icon="@drawable/youtubee"
        android:title="@string/youtubee" />

    <item android:id="@+id/menuNetflix"
        android:icon="@drawable/netflix"
        android:title="@string/netflix" />

    <item android:id="@+id/menuSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item android:id="@+id/menuabout"
        android:icon="@drawable/about"
        android:title="@string/about" />

    <item android:id="@+id/menulogout"
        android:icon="@drawable/logout"
        android:title="@string/logoutt" />



</menu>